--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
-  font-family: courier;
-  background-color: grey;
+  font-family: century gothic;
+  background-color: white;
 }
 
 h2{
-  color: red
+  color: black
 }
