--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 /* Create two equal columns that floats next to each other */
 .column {
-  float: left;
+  float: center;
   width: 50%;
   padding: 10px;
   height: 200px; /* Should be removed. Only for demonstration */
