--- a/style.css
+++ b/style.css
@@ -26,60 +26,32 @@ p {
   font-size: 20px;
 }
 
+
+
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  font-family: Arial;
+  font-family: lucida;
+  font-size: 10px;
 }
 
-/* The grid: Four equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 25%;
-  padding: 10px;
-}
-
-/* Style the images inside the grid */
-.column img {
-  opacity: 0.8;
-  cursor: pointer;
-}
-
-.column img:hover {
-  opacity: 1;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* The expanding image container */
 .container {
   position: relative;
-  display: none;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
-/* Expanding image text */
-#imgtext {
-  position: absolute;
-  bottom: 15px;
-  left: 15px;
-  color: white;
-  font-size: 20px;
-}
+.container img {vertical-align: middle;;}
 
-/* Closable button inside the expanded image */
-.closebtn {
+.container .content {
   position: absolute;
-  top: 10px;
-  right: 15px;
-  color: white;
-  font-size: 35px;
-  cursor: pointer;
+  bottom: 0;
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  color: #f1f1f1;
+  width: 50%;
+  padding: 10px;
 }
