--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 /* Create two equal columns that floats next to each other */
 .column {
-  float: center;
+  float: right;
   width: 50%;
   padding: 10px;
   height: 200px; /* Should be removed. Only for demonstration */
@@ -52,6 +52,10 @@ body {
   background: rgb(0, 0, 0); /* Fallback color */
   background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
   color: #f1f1f1;
-  width: 50%;
-  padding: 10px;
+  width: 92%;
+
+}
+
+.sample{
+
 }
