--- a/style.css
+++ b/style.css
@@ -1,61 +1,22 @@
-* {
-  box-sizing: border-box;
+*{
+      margin: 0;
+      padding: 0;
 }
-
-/* Create two equal columns that floats next to each other */
-.column {
-  float: right;
-  width: 50%;
-  padding: 10px;
-  height: 200px; /* Should be removed. Only for demonstration */
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-p.monospace {
-  font-family: "lucida console", lucida, monospace;
-}
-p.monospace {
-  font-family: "courier new", courier, monospace;
-}
-p {
-  font-size: 20px;
-}
-
-
-
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: lucida;
-  font-size: 10px;
-}
-
-.container {
-  position: relative;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-.container img {vertical-align: middle;;}
-
-.container .content {
-  position: absolute;
-  bottom: 0;
-  background: rgb(0, 0, 0); /* Fallback color */
-  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-  color: #f1f1f1;
-  width: 92%;
+.header
+{
+  height: 100vh;
 
 }
-
-.sample{
-
+.navbar-style
+{
+  box-shadow: 0 5px 10px #FFFFFF;
+}
+.logo
+{
+    height: 50px;
+    padding: 2px 10px;
+}
+.icon-navbar
+{
+  background: black;
 }
