--- a/style.css
+++ b/style.css
@@ -1,28 +1,60 @@
-*{
-      margin: 0;
-      padding: 0;
+* {
+    margin: 0;
+    padding: 0;
 }
 .header
 {
-  height: 100vh;
-
+    height: 100vh;
 }
 .navbar-style
 {
-  box-shadow: 0 5px 10px #FFFFFF;
-  text-transform: uppercase;
+    box-shadow: 0 5px 10px #efefef;
 }
 .logo
 {
-    height: 50px;
+    height: 48px;
     padding: 2px 10px;
+
 }
 .icon-bar
 {
-  background: black;
+    background: black;
 }
 
-li a
+li {
+    display: inline-block;
+}
+
+li a {
+    text-decoration: none;
+    display: inline-block;
+    color: #333;
+    font-family: Source Sans Pro;
+    font-weight: lighter;
+    font-size: 25px;
+    padding: 0 20px;
+}
+
+.cool-link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #fff;
+    transition: width .3s
+}
+
+.cool-link:hover::after {
+    width: 100%;
+    transition: width .3s;
+}
+.big-text
 {
-  color: #333;
+    font-size: 52px;
+    margin: 20px;
+    color: black;
+}
+a.button
+{
+    margin: 30px 10px;
 }
