--- a/style.css
+++ b/style.css
@@ -6,19 +6,20 @@
 {
     height: 100vh;
 }
-.navbar-style
-{
-    box-shadow: 0 5px 10px #efefef;
-}
 .logo
 {
-    height: 48px;
+    height: 53px;
     padding: 2px 10px;
-
 }
 .icon-bar
 {
     background: black;
+}
+.container {
+  position:absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 li {
@@ -28,10 +29,11 @@ li {
 li a {
     text-decoration: none;
     display: inline-block;
-    color: #333;
-    font-family: Source Sans Pro;
+    color: #000000;
+    font-family: sans-serif;
+    text-transform: uppercase;
     font-weight: lighter;
-    font-size: 25px;
+    font-size: 20px;
     padding: 0 20px;
 }
 
@@ -40,7 +42,7 @@ li a {
     display: block;
     width: 0;
     height: 2px;
-    background: #fff;
+    background: #000000;
     transition: width .3s
 }
 
@@ -48,13 +50,11 @@ li a {
     width: 100%;
     transition: width .3s;
 }
-.big-text
-{
-    font-size: 52px;
-    margin: 20px;
-    color: black;
-}
 a.button
 {
     margin: 30px 10px;
+}
+a:hover {
+  color: #000000 !important;
+  background-color: #fff !important;
 }
